NMSW-4170 fixed the paging text alignment

--- a/src/public/stylesheets/custom.css
+++ b/src/public/stylesheets/custom.css
@@ -142,3 +142,6 @@ h3.govuk-notification-banner__heading {
 .loader-text-opacity {
  opacity: 0.5;
 }
+.total-paging-items {
+    margin-left: auto;
+}
